kubernetes/apps/kube-system/unifi/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: unifi-network-application
spec:
  ingressClassName: internal
  rules:
    - host: &host unifi.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-network-application
                port:
                  number: 443
  tls:
    - hosts:
        - *host
